# exa-postgres-interface

./: .gitignore  Cargo.toml  README.md  pyproject.toml
config/: example.toml
docs/: client-compatibility-test-framework.md  postgres-metadata-compatibility.md  smoke-test.md
packaging/: exa-postgres-interface.service
scripts/: exasol_exec.py  refresh_postgres_compatibility.py  run_gateway_vs_exasol_benchmark.sh  run_jdbc_compatibility_suite.sh  setup_sample_data.sh
specs/: mission.md
specs/_plans/add-read-only-postgres-interface/: implementation-notes.md  plan.md  verification-report.md
specs/_plans/add-read-only-postgres-interface/operations/service-runtime/: spec.md
specs/_plans/add-read-only-postgres-interface/protocol/read-only-query-path/: spec.md
specs/_plans/add-read-only-postgres-interface/sql/postgres-to-exasol-translation/: spec.md
specs/_plans/add-read-only-postgres-interface/testing/exasol-sample-data/: spec.md
specs/_plans/add-select-compatibility-test-framework/: plan.md  verification-report.md
sql/: exasol_sql_preprocessor.sql  postgres_catalog_compatibility.sql  sample_data.sql
src/: config.rs  exasol.rs  main.rs  metadata.rs  pg_server.rs  policy.rs
src/exa_postgres_interface/: __init__.py  __main__.py  backend.py  config.py  gateway.py  messages.py  policy.py  server.py
tests/: test_backend.py  test_config.py  test_gateway.py  test_messages.py  test_policy.py  test_protocol.py  test_sql_preprocessor.py
tests/jdbc/: GatewayVsDirectExasolBenchmark.java  PgJdbcCompatibilitySuite.java  PgJdbcMetaSmoke.java  PgJdbcSmoke.java
(+1 files in other folders)
