[package]
name = "exa-postgres-interface"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
default-run = "exa-postgres-interface"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
byteorder = "1"
futures = "0.3"
native-tls = "0.2"
pgwire = { version = "0.39", features = ["server-api-aws-lc-rs"] }
rand = "0.8"
regex = "1"
rsa = "0.9"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"

[dev-dependencies]
tempfile = "3"
