[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exa-postgres-interface"
version = "0.1.0"
description = "Prototype PostgreSQL wire-protocol gateway for Exasol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyexasol>=0.27",
  "sqlglot>=23",
]

[project.optional-dependencies]
test = []

[project.scripts]
exa-postgres-interface = "exa_postgres_interface.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
